--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "node ./node_modules/jest/bin/jest.js",
-    "start": "tsc && node ./build/src/index.js",
-    "start:dev": " ts-node-dev ./src/index.ts"
+    "start": "tsc && node ./build/index.js",
+    "start:dev": " ts-node-dev ./index.ts"
   },
   "author": "Nauara Melo",
   "license": "ISC",
