--- a/package.json
+++ b/package.json
@@ -5,24 +5,31 @@
   "main": "index.js",
   "scripts": {
     "test": "node ./node_modules/jest/bin/jest.js",
-    "start": "tsc && node ./build/index.js",
-    "start:dev": " ts-node-dev ./index.ts"
+    "start": "tsc && node ./build/local.js",
+    "start:dev": " ts-node-dev ./local.ts",
+    "ziplambda": "rm -f ../lambda.zip && bestzip ../lambda.zip ./*",
+    "build": "rm -rf build && tsc",
+    "postbuild": "cp ./package.json build && cd build && npm i && npm run ziplambda"
   },
   "author": "Nauara Melo",
   "license": "ISC",
   "dependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/jest": "^25.2.3",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/knex": "^0.16.1",
     "@types/uuid": "^7.0.3",
     "bcryptjs": "^2.4.3",
+    "bestzip": "^2.1.5",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jest": "^26.0.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.1",
+    "lbn-lambda-express": "^0.1.10",
     "mysql": "^2.18.1",
     "ts-jest": "^26.1.0",
     "typescript": "^3.9.2",
